@@ -31,6 +31,7 @@ t/data/text-results/raw-fort-empty-info-1.txt
 t/data/text-results/raw-fort-with-info-1.txt
 t/data/text-results/screenplay-fort-sample-1.txt
 t/data/text-results/screenplay-fort-sample-2-long-line.txt
+t/data/text-results/screenplay-fort-sample-2-with-italics.txt
 t/data/text-results/screenplay-fort-sample-3-with-inlinedesc.txt
 t/data/xhtml-results/irc-conversation-4-several-convos.xhtml
 t/data/xhtml-results/irc-convos-and-raw-fortunes-1.xhtml
