@@ -1,0 +1,15 @@
+[David and Goliath are standing by each other.]
+
+David: I will kill you, as written in /Treasure Island/.
+I will kill you.
+You will not *survive*.
+I will kill you.
+I will kill you.
+Ask Jive.
+
+Goliath: no way, you little idiot!
+
+David: yes way!
+
+    -- Shlomi Fish
+    -- David and Goliath Skit ( http://www.shlomifish.org/ )
